--- a/WAR/web/WEB-INF/web.xml
+++ b/WAR/web/WEB-INF/web.xml
@@ -3,4 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+    <servlet>
+        <servlet-name>BasicServletExample</servlet-name>
+        <servlet-class>net.dries007.jee.war.BasicServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>BasicServletExample</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
 </web-app>
